# ninjacore

./: .gitignore  .token-write-probe  AGENTS.md  ALL CLIENTS.numbers  APPLE_OAUTH_EXACT_FIX.md  APPLE_OAUTH_FIX.mjs  APPLE_SSO_CRITICAL_NOTES.md  ARCHITECTURE.md  AUTH_SERVER_APPLE_FIX.sh  CLAUDE.md  CODEX_HANDOFF.md  CODE_SPLITTING.md  Caddyfile  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOY_FULL.sh  DEPLOY_GUIDE.md  DEPLOY_NOW.sh  FRONTEND_STATUS.md  IMPLEMENTATION_REVIEW.md  INTEGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PartnerHub_2026-05-25_Active.xlsx  QUICK_DEPLOY.md  README.md  SCALE.md  SESSION_2026-05-27.md  SSO-SETUP-GUIDE.md  SURREALDB_V3_MIGRATION.md  SVELTE_CONST_FIX.md  UNIX_SOCKET_INTEGRATION.md  UNIX_SOCKET_SETUP.md  app.js  apply-apple-fix.sh  auto-deploy.sh  billing.html  billing.js  build.mjs  deploy-frontend.sh  (+24 more)
.claude/: settings.json  settings.local.json
CSV/: ALL contacts.csv  Canceled  Clients.csv  Ghosting  IDIQ Issue
FRONT-END/: README.md  svelte.config.js
Front-End/: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  INSTRUCTIONS.md  QUICKSTART.md  README.md  index.html  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
_tmp/: SESSION-2026-05-26-frontend-scaffold.md  SESSION-2026-05-26-handoff.md  partner_hub.json  ssnCrypto.ts  surreal-client-status-finalize-backup-20260608.json  surreal-client-status-finalize-summary-20260608.json  surreal-client-status-last18-backup-20260608.json  surreal-client-status-last18-summary-20260608.json  surreal-client-status-reconcile-backup-20260608.json  surreal-csv-sync-backup-20260608.json  surreal-csv-sync-summary-20260608.json  surreal-dedupe-summary-20260608.json  thumb-route-patch.txt  thumb-route-v2.txt
ai/: claude.ts  groq.ts  letterGenerator.ts  replaceTags.ts  test-letter.ts
deploy/: ninjacore-clients-deploy.sh
docs/: INDEXING_STRATEGY.md  migration-next.md
letter-server/: Cargo.toml  README.md
letter-server/src/: main.rs
lib/: cache.mjs
ninjacore/: .env.example  Cargo.toml  Dockerfile  README.md
ninjacore-live-20260608/: clients.rs  dashboard.html  main.rs  styles.css
ninjacore/deploy/: Caddyfile  Caddyfile.live.20260526  README.md  ninjacore.service
ninjacore/r2-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
ninjacore/r2-worker/src/: index.ts
ninjacore/src/: auth.rs  config.rs  db.rs  error.rs  http.rs  main.rs  r2.rs  report_run.rs  state.rs
ninjacore/src/handlers/: affiliate.rs  alternate.rs  auth.rs  billing.rs  clients.rs  derogatory.rs  documents.rs  ghl.rs  health.rs  letters.rs  misc.rs  mod.rs  payments.rs  settings.rs  sso.rs  training.rs  uploads.rs
ninjadispute-api/: .env.example  Cargo.toml
ninjadispute-api/src/: config.rs  main.rs  state.rs
ninjadispute-api/src/handlers/: apple.rs  health.rs  mod.rs
public/: FULL.html  add-client.html  add-clients.html  app.critical.js  app.js  archive-arsenal-source.txt  archive-green-login.css  archive-green-login.html  billing.css  billing.html  billing.js  dashboard.html  full-disputes.css  full-disputes.js  full-modern.css  full-modern.js  index.html  (+20 more)
(+479 files in other folders)
