[package]
name = "letter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
base64 = "0.22"
bytes = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
typst = "0.14"
typst-as-lib = "0.15.4"
typst-assets = { version = "0.14", features = ["fonts"] }
typst-pdf = "0.14"
