[package]
name = "ninjacore"
version = "0.1.0"
edition = "2021"
description = "NinjaDispute main API — Axum + Tokio + DashMap + SurrealDB"

[[bin]]
name = "ninjacore"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "fs", "timeout"] }
hyper = { version = "1", features = ["full"] }

surrealdb = { version = "3.0.5", default-features = false, features = ["protocol-ws", "protocol-http", "rustls"] }
dashmap = "6"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

sha2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
rusty_paseto = { version = "0.7", default-features = false, features = ["v4_local"] }
cookie = "0.18"

anyhow = "1"
thiserror = "2"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

time = { version = "0.3", features = ["serde", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "stream"] }
once_cell = "1"
futures-util = "0.3"
mime_guess = "2"
csv = "1"
regex = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
