[package]
name = "ninjadispute-api"
version = "0.1.0"
edition = "2021"
description = "NinjaDispute user-facing API (api.ninjadispute.com) — Axum + SurrealDB, OAuth providers"

[[bin]]
name = "ninjadispute-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "http2"] }
jsonwebtoken = "9"

dashmap = "6"
rand = "0.8"
hex = "0.4"
url = "2"
once_cell = "1"

anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
time = { version = "0.3", features = ["serde", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
